# oni2

./: .gitattributes  .gitignore  .prettierignore  CHANGES.md  CHANGES_CURRENT.md  CONTRIBUTING.md  Dockerfile.dev  ExtHostBufferOpenTest.re  LICENSE.md  Outrun-Labs-EULA-v1.0.md  Outrun-Labs-EULA-v1.1.md  README.md  STABLE_SIGNOFF.md  STAGING_SIGNOFF.md  TEST_SIGNOFF.md  TODO.md  ThirdPartyLicenses.txt  azure-pipelines.yml  bench.json  bootstrap.sh  dune  dune-project  index.html  install-node-deps.js  integrationtest.json  package.json  release.json  setup.txt  sitemap.xml  test.json  update-lockfiles.sh  users.html
assets/fonts/: dune
integration_test/: AddRemoveSplitTest.re  ClipboardChangeTest.re  ClipboardInsertModePasteEmptyTest.re  ClipboardInsertModePasteMultiLineTest.re  ClipboardInsertModePasteSingleLineTest.re  ClipboardNormalModePasteTest.re  ClipboardPasteEmptyTest.re  ClipboardPasteMultiLineTest.re  ClipboardPasteSingleLineTest.re  ClipboardYankTest.re  ClipboardxpTest.re  ClipboardyypTest.re  ConfigurationInvalidThemeTest.re  ConfigurationPerFileTypeTest.re  CopyActiveFilepathToClipboardTest.re  EchoNotificationTest.re  EditorFontFromPathTest.re  EditorFontInvalidTest.re  EditorFontNotMonospaceTest.re  EditorFontValidTest.re  EditorSplitFileTest.re  EditorUtf8Test.re  ExCommandKeybindingNormTest.re  ExCommandKeybindingTest.re  ExCommandKeybindingWithArgsTest.re  ExtConfigurationChangedTest.re  ExtHostBufferOpenTest.re  ExtHostBufferUpdatesTest.re  ExtHostCommandActivationTest.re  ExtHostCompletionTest.re  ExtHostContextTest.re  ExtHostDefinitionTest.re  ExtHostFileSystemTest.re  ExtHostFormatFullEditTest.re  ExtHostFormatSingleEditTest.re  ExtHostWorkspaceSearchTest.re  FileWatcherTest.re  FontSizeChangeTest.re  FormatOnSaveTest.re  InputContextKeysTest.re  (+68 more)
integration_test/lib/: ExtensionHelpers.re  ExtensionHelpers.rei  Oni_IntegrationTestLib.re  Oni_IntegrationTestLib.rei  SyntaxServerTest.re  TextSynchronization.re  TextSynchronization.rei  Types.re  dune
src/Components/: Accordion.re  BusyBar.re  Button.re  Codicon.re  ContextMenu.re  ContextMenu.rei  Count.re  CustomHooks.re  FeatherIcons.re  FeatherIcons.rei  FileIcon.re  FileItemView.re  FlatList.re  FontAwesome.re  FontIcon.re  HighlightText.re  HoverView.re  Input.re  InputModel.re  KeyDisplayer.re  KeyDisplayer.rei  Label.re  LocationList.re  LocationListItem.re  Markdown.re  MessageBox.re  MessageBox.rei  OniBoxShadow.re  OniLayer.re  Oni_Components.re  Popup.re  RemoteAsset.re  RemoteAsset.rei  RemoteImage.re  RemoteMarkdown.re  ResizeHandle.re  SVGIcon.re  ScrollShadow.re  Scrollbar.re  Selection.re  (+7 more)
src/Core/: AsyncJob.re  Buffer.re  Buffer.rei  BufferLine.re  BufferLine.rei  BufferPath.re  BufferTracker.re  BufferUpdate.re  BufferUpdate.rei  CamomileBundled.re  Cli.re  Codicon.re  ColorTheme.re  ColorTheme.rei  ColorizedToken.re  Command.re  Command.rei  Comments.re  Comments.rei  Config.re  Config.rei  Configuration.re  ConfigurationDefaults.re  ConfigurationParser.re  ConfigurationParser.rei  ConfigurationTransformer.re  ConfigurationValues.re  Constants.re  ContextMenu.re  ContextMenu.rei  Cursor.re  Decoration.re  Diff.ml  Diff.mli  DiffMarkers.re  DiffMarkers.rei  EditorFont.re  EditorSize.re  EffectEx.re  Filesystem.re  (+110 more)
src/Core_Kernel/: Core_Kernel.re  Oni_Core_Kernel.re  Setup.re  dune
src/ExtensionManagement/: Oni_ExtensionManagement.re  Oni_ExtensionManagement.rei  dune
src/Extensions/: CompletionItemKind.re  CompletionKind.re  Configuration.re  Configuration.rei  DocumentSelector.re  DocumentSelector.rei  DocumentSymbol.re  ExtHostClient.re  ExtHostClient.rei  ExtHostClient_SCM.re  ExtHostClient_Terminal.re  ExtHostInitData.re  ExtHostProtocol.re  ExtHostTransport.re  ExtHostTransport.rei  ExtensionContributions.re  ExtensionManifest.re  ExtensionScanner.re  ExtensionScanner.rei  LanguageConfiguration.re  LanguageConfiguration.rei  LanguageConfigurationLoader.re  LanguageFeatures.re  LanguageInfo.re  LanguageInfo.rei  LocalizationDictionary.re  LocalizationDictionary.rei  LocalizedToken.re  LocalizedToken.rei  Location.re  LocationWithUri.re  MessageType.re  MessageType.rei  NodeProcess.re  NodeTask.re  NodeTask.rei  Oni_Extensions.re  ProviderUtility.re  SCM.re  SCM.rei  (+3 more)
src/Exthost/: CacheId.re  ChainedCacheId.re  Client.re  CodeAction.re  CodeLens.re  Color.re  Command.re  Commands.re  CompletionContext.re  CompletionKind.re  Configuration.re  Configuration.rei  DebugService.re  DefinitionLink.re  Diagnostic.re  DocumentFilter.re  DocumentHighlight.re  DocumentSelector.re  DocumentSymbol.re  DocumentsAndEditorsDelta.re  Edit.re  Eol.re  Error.re  ExtensionActivationError.re  ExtensionActivationReason.re  ExtensionId.re  ExtensionService.re  Exthost.re  Exthost.rei  Files.re  FormattingOptions.re  GrammarInfo.re  GrammarInfo.rei  Handlers.re  Hover.re  InputBoxOptions.re  Label.re  LanguageConfiguration.re  LanguageInfo.re  LanguageInfo.rei  (+37 more)
src/Input/: Expression.re  Handler.re  Handler.rei  Keybindings.re  Keybindings.rei  Oni_Input.re  Parser.re  When.re  When_lexer.mll  When_parser.mly  dune
src/Merlin/: Esy.re  Merlin.re  MerlinDiscovery.re  MerlinProtocol.re  MerlinProtocolConverter.re  MerlinRequestQueue.re  Oni_Merlin.re  dune
src/Model/: Actions.re  ActivityBar.re  Animation.re  Buffer.re  Buffer.rei  BufferHighlights.re  BufferHighlights.rei  BufferLineColorizer.re  BufferLineColorizer.rei  BufferRenderer.re  BufferRenderers.re  BufferSyntaxHighlights.re  BufferSyntaxHighlightsReducer.re  BufferViewTokenizer.re  Buffers.re  Command.re  CommandManager.re  CommandPalette.re  Commands.re  CompletionItem.re  CompletionMeet.re  CompletionMeet.rei  Completions.re  Completions.rei  ContextKeys.re  (+89 more)
test/: OniUnitTestRunner.re  OniUnitTestRunnerCI.re  OniUnitTestRunnerCLI.re  OniUnitTestRunnerCore.re  OniUnitTestRunnerEditor.re  OniUnitTestRunnerExtHost.re  OniUnitTestRunnerInput.re  OniUnitTestRunnerLibvim.re  OniUnitTestRunnerModel.re  OniUnitTestRunnerServiceExtensions.re  OniUnitTestRunnerServiceNet.re  OniUnitTestRunnerTextmate.re  OniUnitTestRunnerUI.re  dune
(+1968 files in other folders)
