(lang dune 2.5)
(using menhir 2.0)

(formatting (enabled_for reason))

(name oni2)

(package
 (name Oni2))

(package
 (name OniBench))

(package
 (name OniIntegrationTests))

(package
 (name OniUnitTestRunner))

(package
 (name libvim))

(package
 (name textmate))

(package
 (name treesitter))

(package
 (name vterm))
