(executables
 (names InsertModeTest ClipboardInsertModePasteMultiLineTest
   ClipboardInsertModePasteSingleLineTest ClipboardInsertModePasteEmptyTest
   ClipboardNormalModePasteTest ClipboardYankTest ClipboardxpTest
   ClipboardyypTest CopyActiveFilepathToClipboardTest EchoNotificationTest
   ConfigurationInvalidThemeTest ConfigurationPerFileTypeTest
   EditorFontFromPathTest EditorFontValidTest EditorSplitFileTest
   EditorUtf8Test ExCommandKeybindingTest ExCommandKeybindingWithArgsTest
   ExCommandKeybindingNormTest ExtConfigurationChangedTest
   ExtHostBufferOpenTest ExtHostBufferUpdatesTest
   ExtHostCommandActivationTest ExtHostCompletionTest ExtHostDefinitionTest
   ExtHostWorkspaceSearchTest FileWatcherTest KeybindingsInvalidJsonTest
   KeySequenceJJTest InputIgnoreTest InputContextKeysTest
   InputRemapMotionTest LanguageCssTest LanguageTypeScriptTest
   LineEndingsLFTest LineEndingsCRLFTest QuickOpenEventuallyCompletesTest
   SearchShowClearHighlightsTest SyntaxServer SyntaxServerCloseTest
   SyntaxServerMessageExceptionTest SyntaxServerParentPidTest
   SyntaxServerParentPidCorrectTest SyntaxServerReadExceptionTest
   Regression1671Test Regression2349EnewTest Regression2988SwitchEditorTest
   Regression3084CommandLoopTest RegressionCommandLineNoCompletionTest
   RegressionFontFallbackTest RegressionFileModifiedIndicationTest
   RegressionNonExistentDirectory RegressionVspEmptyInitialBufferTest
   RegressionVspEmptyExistingBufferTest SCMGitTest SyntaxHighlightPhpTest
   SyntaxHighlightTextMateTest SyntaxHighlightTreesitterTest
   AddRemoveSplitTest TerminalSetPidTitleTest TerminalConfigurationTest
   TypingBatchedTest TypingUnbatchedTest VimIncsearchScrollTest
   VimExperimentalVimlTest VimRemapTimeoutTest VimSimpleRemapTest
   VimlRemapCmdlineTest ClipboardChangeTest VimScriptLocalFunctionTest
   ZenModeSingleFileModeTest ZenModeSplitTest)
 (libraries Oni_CLI Oni_IntegrationTestLib reason-native-crash-utils.asan))

(install
 (section bin)
 (package OniIntegrationTests)
 (files run-tests.sh InsertModeTest.exe
   ClipboardInsertModePasteMultiLineTest.exe
   ClipboardInsertModePasteSingleLineTest.exe
   ClipboardInsertModePasteEmptyTest.exe ClipboardNormalModePasteTest.exe
   ClipboardYankTest.exe ClipboardxpTest.exe ClipboardyypTest.exe
   ConfigurationInvalidThemeTest.exe ConfigurationPerFileTypeTest.exe
   CopyActiveFilepathToClipboardTest.exe EchoNotificationTest.exe
   EditorFontFromPathTest.exe EditorFontValidTest.exe EditorSplitFileTest.exe
   EditorUtf8Test.exe ExCommandKeybindingTest.exe
   ExCommandKeybindingNormTest.exe ExCommandKeybindingWithArgsTest.exe
   ExtConfigurationChangedTest.exe ExtHostBufferOpenTest.exe
   ExtHostBufferUpdatesTest.exe ExtHostCommandActivationTest.exe
   ExtHostCompletionTest.exe ExtHostDefinitionTest.exe
   ExtHostWorkspaceSearchTest.exe FileWatcherTest.exe
   KeybindingsInvalidJsonTest.exe KeySequenceJJTest.exe InputIgnoreTest.exe
   InputContextKeysTest.exe InputRemapMotionTest.exe LanguageCssTest.exe
   LanguageTypeScriptTest.exe LineEndingsCRLFTest.exe LineEndingsLFTest.exe
   QuickOpenEventuallyCompletesTest.exe Regression1671Test.exe
   Regression2349EnewTest.exe Regression2988SwitchEditorTest.exe
   Regression3084CommandLoopTest.exe
   RegressionCommandLineNoCompletionTest.exe
   RegressionFileModifiedIndicationTest.exe RegressionFontFallbackTest.exe
   RegressionVspEmptyInitialBufferTest.exe RegressionNonExistentDirectory.exe
   RegressionVspEmptyExistingBufferTest.exe SCMGitTest.exe
   SearchShowClearHighlightsTest.exe SyntaxHighlightTextMateTest.exe
   SyntaxHighlightTreesitterTest.exe SyntaxServer.exe
   SyntaxServerCloseTest.exe SyntaxServerMessageExceptionTest.exe
   SyntaxHighlightPhpTest.exe SyntaxServerParentPidTest.exe
   SyntaxServerParentPidCorrectTest.exe SyntaxServerReadExceptionTest.exe
   TerminalSetPidTitleTest.exe TerminalConfigurationTest.exe
   AddRemoveSplitTest.exe TypingBatchedTest.exe TypingUnbatchedTest.exe
   VimExperimentalVimlTest.exe VimIncsearchScrollTest.exe
   VimScriptLocalFunctionTest.exe VimRemapTimeoutTest.exe
   VimSimpleRemapTest.exe VimlRemapCmdlineTest.exe
   ZenModeSingleFileModeTest.exe ZenModeSplitTest.exe ClipboardChangeTest.exe
   large-c-file.c lsan.supp some-test-file.json some-test-file.txt test.crlf
   test.lf test-syntax.php utf8.txt utf8-test-file.htm
   Inconsolata-Regular.ttf PlugScriptLocal.vim))
