(executables
 (names InsertModeTest ClipboardInsertModePasteMultiLineTest
   ClipboardInsertModePasteSingleLineTest ClipboardInsertModePasteEmptyTest
   ClipboardNormalModePasteTest ClipboardYankTest ClipboardxpTest
   ClipboardyypTest CopyActiveFilepathToClipboardTest EchoNotificationTest
   ConfigurationInvalidThemeTest ConfigurationPerFileTypeTest
   EditorFontFromPathTest EditorFontValidTest EditorSplitFileTest
   EditorUtf8Test ExCommandKeybindingTest ExCommandKeybindingWithArgsTest
   ExCommandKeybindingNormTest ExtConfigurationChangedTest ExtHostContextTest
   ExtHostBufferOpenTest ExtHostBufferUpdatesTest
   ExtHostCommandActivationTest ExtHostCompletionTest ExtHostDefinitionTest
   ExtHostWorkspaceSearchTest FileWatcherTest FormatOnSaveTest
   KeybindingsInvalidJsonTest KeySequenceJJTest InputIgnoreTest
   InputContextKeysTest InputRemapMotionTest LanguageCssTest
   LanguageTypeScriptTest LineEndingsLFTest LineEndingsCRLFTest
   QuickOpenEventuallyCompletesTest SearchShowClearHighlightsTest
   SyntaxServer SyntaxServerCloseTest SyntaxServerMessageExceptionTest
   SyntaxServerParentPidTest SyntaxServerParentPidCorrectTest
   Regression3323DiagnosticsTest SyntaxServerReadExceptionTest
   Regression1671Test Regression2349EnewTest Regression2988SwitchEditorTest
   Regression3084CommandLoopTest RegressionCommandLineNoCompletionTest
   RegressionFontFallbackTest RegressionFileModifiedIndicationTest
   RegressionNonExistentDirectory RegressionVspEmptyInitialBufferTest
   RegressionVspEmptyExistingBufferTest SCMGitTest SyntaxHighlightPhpTest
   SyntaxHighlightTextMateTest SyntaxHighlightTreesitterTest
   AddRemoveSplitTest TerminalSetPidTitleTest TerminalConfigurationTest
   TypingBatchedTest TypingUnbatchedTest VimIncsearchScrollTest
   VimExperimentalVimlTest VimRemapTimeoutTest VimSimpleRemapTest
   VimlRemapCmdlineTest ClipboardChangeTest VimScriptLocalFunctionTest
   ZenModeSingleFileModeTest ZenModeSplitTest)
 (libraries Oni_CLI Oni_IntegrationTestLib reason-native-crash-utils.asan))

(install
 (section bin)
 (package OniIntegrationTests)
 (files run-tests.sh InsertModeTest.exe Regression3323DiagnosticsTest.exe
   test.unformatted.js large-c-file.c lsan.supp some-test-file.json
   some-test-file.txt test.crlf test.lf test-syntax.php utf8.txt
   utf8-test-file.htm Inconsolata-Regular.ttf PlugScriptLocal.vim))
