(executables
 (names InsertModeTest 
    RegressionLayoutTabSingleEditor
   )
 (libraries Oni_CLI Oni_IntegrationTestLib reason-native-crash-utils.asan))

(install
 (section bin)
 (package OniIntegrationTests)
 (files run-tests.sh InsertModeTest.exe
   RegressionLayoutTabSingleEditor.exe
   unformatted1.oni-dev test.unformatted.js large-c-file.c lsan.supp
   some-test-file.json some-test-file.txt test.crlf test.lf test-syntax.php
   utf8.txt utf8-test-file.htm Inconsolata-Regular.ttf PlugScriptLocal.vim))
