(executable
    (name OniUnitTestRunner)
    (public_name OniUnitTestRunner)
    (modules OniUnitTestRunner)
    (package OniUnitTestRunner)
    (libraries
        yojson
        Oni_Cli_Test
        Oni_Core_Test
        Oni_Components_Test
        Oni_Extensions_Test
        Oni_ExtensionManagement_Test
        Oni_Input_Test
        Oni_Model_Test
        Oni_UI_Test
        Oni_Syntax_Test
        Feature_Editor_Test
        Feature_LanguageSupport_Test
        Exthost_Transport_Test
        Exthost_Test
        Libvim_Test
        reason-native-crash-utils.asan
            ))

(executable
    (name OniUnitTestRunnerCLI)
    (public_name OniUnitTestRunnerCLI)
    (modules OniUnitTestRunnerCLI)
    (package OniUnitTestRunner)
    (libraries
        yojson
        Oni_Cli_Test
            ))

(executable
    (name OniUnitTestRunnerCore)
    (public_name OniUnitTestRunnerCore)
    (modules OniUnitTestRunnerCore)
    (package OniUnitTestRunner)
    (libraries
        yojson
        Oni_Core_Test
            ))

(executable
    (name OniUnitTestRunnerInput)
    (public_name OniUnitTestRunnerInput)
    (modules OniUnitTestRunnerInput)
    (package OniUnitTestRunner)
    (libraries
        yojson
        Oni_Core_Test
        Oni_Input_Test
            ))

(executable
    (name OniUnitTestRunnerModel)
    (public_name OniUnitTestRunnerModel)
    (modules OniUnitTestRunnerModel)
    (package OniUnitTestRunner)
    (libraries
        yojson
        Oni_Core_Test
        Oni_Model_Test
            ))

(executable
    (name OniUnitTestRunnerUI)
    (public_name OniUnitTestRunnerUI)
    (modules OniUnitTestRunnerUI)
    (package OniUnitTestRunner)
    (libraries 
        Oni_Core_Test
        Oni_UI_Test))

(executable
    (name OniUnitTestRunnerExtHost)
    (public_name OniUnitTestRunnerExtHost)
    (modules OniUnitTestRunnerExtHost)
    (package OniUnitTestRunner)
    (libraries 
        Oni_Core_Test
        Exthost_Transport_Test
        Exthost_Test))

(executable
    (name OniUnitTestRunnerLibvim)
    (public_name OniUnitTestRunnerLibvim)
    (modules OniUnitTestRunnerLibvim)
    (package OniUnitTestRunner)
    (libraries 
        Oni_Core_Test
        Libvim_Test
        reason-native-crash-utils.asan
        ))

(executable
    (name OniUnitTestRunnerCI)
    (public_name OniUnitTestRunnerCI)
    (modules OniUnitTestRunnerCI)
    (package OniUnitTestRunner)
    (libraries
        yojson
        Oni_Cli_Test
        Oni_Core_Test
        Oni_Components_Test
        Oni_ExtensionManagement_Test
        Oni_Extensions_Test
        Oni_Input_Test
        Oni_Syntax_Test
        Oni_Model_Test
        Exthost_Transport_Test
        Exthost_Test
        Libvim_Test
        reason-native-crash-utils.asan
            ))
