(install
 (section bin)
 (package Oni2)
 (files Inconsolata-Bold.ttf Inconsolata-Regular.ttf Inter-UI-Medium.ttf
   Inter-UI-MediumItalic.ttf Inter-UI-Regular.ttf Inter-UI-Italic.ttf
   Inter-UI-SemiBoldItalic.ttf Inter-UI-SemiBold.ttf Inter-UI-Bold.ttf
   JetBrainsMono-Regular.ttf JetBrainsMono-Bold.ttf JetBrainsMono-Italic.ttf
   JetBrainsMono-Bold-Italic.ttf FontAwesome5FreeRegular.otf
   FontAwesome5FreeSolid.otf selawk.ttf selawkb.ttf selawkl.ttf selawksb.ttf
   selawksl.ttf seti.ttf codicon.ttf))
