(rule
    (targets BuildInfo.re)
    (deps (:generator ../gen_buildinfo/generator.exe))
    (action (run %{generator}))
)

(library
    (name Oni_Core)
    (public_name Oni2.core)
    (libraries 
        Oni2.core.kernel
        Oni2.core.utility
        Oni2.core.whenExpr
        Rench
        Revery
        yojson
        ppx_deriving.runtime
        ppx_deriving_yojson.runtime
        editor-core-types
        timber
        Fzy
        decoders-yojson
    )
    (preprocess (pps ppx_deriving_yojson ppx_deriving.show)))
