(rule
 (targets BuildInfo.re)
 (deps
  (universe)
  (:generator ../gen_buildinfo/generator.exe))
 (action
  (run %{generator})))

(library
 (name Oni_Core)
 (public_name Oni2.core)
 (libraries Oni2.core.kernel Oni2.core.utility Oni2.core.whenExpr
   Oni2.core.snippet isolinear Rench Revery yojson ppx_deriving.runtime
   ppx_deriving_yojson.runtime Oni2.editor-core-types timber Fzy
   decoders-yojson angstrom fp)
 (inline_tests)
 (preprocess
  (pps brisk-reconciler.ppx ppx_let ppx_inline_test ppx_deriving_yojson
    ppx_deriving.show)))
