(library
    (name Oni_Core_Kernel)
    (public_name Oni2.core_kernel)
    (libraries 
        yojson
        ppx_deriving.runtime
        ppx_deriving_yojson.runtime
        zed_oni
        Revery
        editor-core-types
        timber)
    (preprocess (pps lwt_ppx ppx_deriving_yojson ppx_deriving.show)))
