(library
    (name Oni_ExtensionManagement)
    (public_name Oni2.extensionManagement)
    (libraries
        str
        bigarray
        zed_oni
        lwt
        lwt.unix
        Rench
        Revery
        yojson
        ppx_deriving.runtime
        ppx_deriving_yojson.runtime
        Oni2.core
        Oni2.extensions
    )
    (preprocess (pps ppx_deriving_yojson ppx_deriving.show)))
