(library
    (name Oni_Extensions)
    (public_name Oni2.extensions)
    (libraries
        str
        bigarray
        zed_oni
        luv
        lwt
        lwt.unix
        Rench
        Revery
        yojson
        ppx_deriving.runtime
        ppx_deriving_yojson.runtime
        reason-jsonrpc
        oniguruma
        Oni2.core
        Oni2.core.whenExpr
        isolinear
    )
    (preprocess (pps ppx_deriving_yojson ppx_deriving.show)))
