(library
    (name Oni_Extensions)
    (public_name Oni2.extensions)
    (libraries
        str
        libvim
        bigarray
        zed_oni
        luv
        lwt
        lwt.unix
        Rench
        Revery
        yojson
        ppx_deriving.runtime
        ppx_deriving_yojson.runtime
        oniguruma
        Oni2.core
        Oni2.core.whenExpr
        Oni2.exthost
        isolinear
    )
    (preprocess (pps ppx_deriving_yojson ppx_deriving.show)))
