(library
    (name Exthost)
    (inline_tests)
    (libraries timber base Oni2.core Oni2.core.kernel Oni2.exthost.extension Oni2.exthost.protocol Oni2.exthost.transport luv Oni2.service.os yojson decoders-yojson)
    (preprocess (pps ppx_let ppx_deriving.show ppx_deriving_yojson ppx_inline_test))
    (public_name Oni2.exthost))
