(library
    (name Oni_Input)
    (public_name Oni2.input)
    (libraries 
        str
        bigarray
        editor-input
        sdl2
        zed_oni
        lwt
        lwt.unix
        Oni2.core
        Rench
        Revery
        vscode-exthost
    )
    (preprocess (pps ppx_deriving_yojson ppx_deriving.show)))
