(library
    (name Oni_Input)
    (public_name Oni2.input)
    (libraries 
        str
        bigarray
        editor-input
        Revery.sdl2
        zed_oni
        lwt
        lwt.unix
        Oni2.core
        Oni2.core.whenExpr
        Rench
        Revery
    )
    (preprocess (pps ppx_deriving_yojson ppx_deriving.show)))
