(library
    (name Oni_Store)
    (public_name Oni2.store)
    (libraries 
        Rench
        Revery
        yojson
        ppx_deriving.runtime
        ppx_deriving_yojson.runtime
        Oni2.core
        Oni2.whenExpression
        Oni2.model
        Oni2.input
        Oni2.extensions
        Oni2.syntax_client
        Oni2.components
        Oni2.ui
        Oni2.feature.terminal
        Oni2.service.terminal
        isolinear
        libvim
        textmate
        treesitter
    )
    (preprocess (pps brisk-reconciler.ppx ppx_deriving_yojson ppx_deriving.show)))
