(library
 (name Oni_Store)
 (public_name Oni2.store)
 (libraries Rench Revery yojson ppx_deriving.runtime
   ppx_deriving_yojson.runtime Oni2.core Oni2.core.whenExpr Oni2.editor-input
   Oni2.model Oni2.input Oni2.syntax_client Oni2.service.extensions
   Oni2.service.font Oni2.service.file-watcher Oni2.service.syntax
   Oni2.service.terminal Oni2.service.vim Oni2.component.vimWindows
   Oni2.components Oni2.ui Oni2.feature.buffers Oni2.feature.clipboard
   Oni2.feature.commands Oni2.feature.extensions Oni2.feature.exthost
   Oni2.feature.input Oni2.feature.language_support Oni2.feature.logging
   Oni2.feature.menus Oni2.feature.notification Oni2.feature.theme
   Oni2.feature.registers Oni2.feature.snippets Oni2.feature.statusbar
   Oni2.feature.terminal Oni2.feature.modals Oni2.feature.vim
   Oni2.feature.editor Oni2.service.autoupdate Oni2.feature.registration
   Oni2.feature.keyboard
   isolinear libvim Oni2.KeyboardLayout textmate treesitter)
 (preprocess
  (pps ppx_let brisk-reconciler.ppx ppx_deriving_yojson ppx_deriving.show)))
