(library
    (name Oni_Syntax_Server)
    (public_name Oni2.syntax_server)
    (libraries 
        str
        bigarray
        zed_oni
        lwt
        lwt.unix
        yojson
        Oni2.core
        Oni2.syntax
        Oni2.model
        Rench
        Revery
        textmate
        treesitter
    ))
