(library
    (name Oni_UI)
    (public_name Oni2.ui)
    (preprocess (pps brisk-reconciler.ppx ppx_deriving.show))
    (libraries 
        str
        bigarray
        zed_oni
        lwt
        lwt.unix
        Oni2.core
        Oni2.model
        Oni2.feature.theme
        Oni2.components
        Oni2.feature.notification
        Oni2.feature.search
        Oni2.feature.editor
        Oni2.feature.scm
        Oni2.feature.modals
        Rench
        Revery
        revery-terminal.lib
        editor-core-types
        ppx_deriving.runtime
    ))
