(executable
    (name Oni2_editor)
    (package Oni2)
    (public_name Oni2_editor)
    (libraries
        bigarray
        zed_oni
        luv
        lwt
        lwt.unix
        oniguruma
        Oni2.cli
        Oni2.core
        Oni2.extensionManagement
        Oni2.extensions
        Oni2.model
        Oni2.store
        Oni2.syntax_client
        Oni2.syntax_server
        Oni2.ui
        Revery.sdl2
        fp
        dir.lib
    )
    (preprocess (
        pps
        lwt_ppx
        brisk-reconciler.ppx
    ))
)
