(executable
 (name Oni2_editor)
 (package Oni2)
 (public_name Oni2_editor)
 (libraries bigarray Revery.zed luv lwt lwt.unix oniguruma Oni2.cli Oni2.core
   Oni2.model Oni2.service.extensions Oni2.service.net Oni2.store
   Oni2.syntax_client Oni2.syntax_server Oni2.ui reason-sdl2 reason-harfbuzz
   fp dir.lib)
 (preprocessor_deps config.h)
 (foreign_stubs
  (language c)
  (names utils sparkle)
  (flags
   (:include c_flags.sexp)))
 (flags
  (:include flags.sexp))
 (preprocess
  (pps lwt_ppx brisk-reconciler.ppx ppx_optcomp)))

(copy_files stubs/*)

(rule
 (targets config.h c_flags.sexp flags.sexp)
 (action
  (run ./config/discover.exe)))
