(executable
 (name Oni2_editor)
 (package Oni2)
 (public_name Oni2_editor)
 (libraries bigarray Revery.zed luv lwt lwt.unix oniguruma Oni2.cli Oni2.core
   Oni2.model Oni2.service.extensions Oni2.service.net Oni2.store
   Oni2.syntax_client Oni2.syntax_server Oni2.ui reason-sdl2 reason-harfbuzz
   Oni2.sparkle Oni2.KeyboardLayout fp dir.lib)
 (preprocess
  (pps ppx_let ppx_deriving.show lwt_ppx brisk-reconciler.ppx)))
