(library
 (name Oni2_KeyboardLayout)
 (public_name Oni2.KeyboardLayout)
 (preprocess
  (pps ppx_deriving_yojson ppx_deriving.show))
 (foreign_stubs
  (language c)
  (names keyboard-layout keyboard-layout-mac keyboard-layout-windows
    keyboard-layout-linux)
  (flags
   (:include c_flags.sexp)))
 (library_flags
  (:include flags.sexp))
 (libraries reason-sdl2))

(copy_files stubs/*)

(rule
 (targets flags.sexp c_flags.sexp)
 (action
  (run ./config/discover.exe)))
