(library
 (name vim)
 (public_name libvim)
 (library_flags
  (:include flags.sexp))
 (foreign_stubs
  (language c)
  (flags
   (:include c_flags.sexp))
  (names bindings))
 (foreign_stubs
  (language cxx)
  (flags
   (:include c_flags.sexp)))
 (preprocess
  (pps ppx_deriving.show))
 (libraries base Oni2.editor-core-types timber Revery.zed
   ppx_deriving.runtime))

(rule
 (targets c_flags.sexp cxx_flags.sexp flags.sexp)
 (deps
  (:discover config/discover.exe))
 (action
  (run %{discover})))
