(library
 (name treesitter)
 (public_name treesitter)
 (library_flags
  (:include flags.sexp))
 (foreign_stubs
  (language c)
  (flags
   (:include c_flags.sexp))
  (names bindings))
 (foreign_stubs
  (language cxx)
  (flags
   (:include cxx_flags.sexp)))
 (libraries Oni2.editor-core-types))

(rule
 (targets c_flags.sexp cxx_flags.sexp flags.sexp)
 (deps
  (:discover config/discover.exe))
 (action
  (run %{discover})))
